--- a/wajibisha/templates/blocks/team.html
+++ b/wajibisha/templates/blocks/team.html
@@ -1,40 +1,40 @@
 {% load staticfiles %}
-<div class="showcase how-it-works text-center">
+<div class="showcase text-center">
   <div class="wrapper clearfix text-center">
    <h4>THE TEAM</h4>
    <!--start a first card group-->
   <div class='pt-0 card-group'>
-    <div class="team card text-center">
-      <div class="card-body pl-0 pr-0">
-        <img clas="card-img" src="{% static 'img/about/team.png' %}">
+    <div class="team card text-center p-0">
+      <div class="card-body">
+        <img  src="{% static 'img/team/ahereza.jpeg' %}" class="team-image">
       </div>
     </div>
-    <div class="team card text-center">
-      <div class="card-body pl-0 pr-0">
-        <img src="{% static 'img/about/team.png' %}">
+    <div class="team card text-center p-0">
+      <div class="card-body">
+        <img src="{% static 'img/team/mugendi.jpg' %}" class="team-image">
       </div>
     </div>
-    <div class="team card text-center">
-      <div class="card-body pl-0 pr-0">
-        <img src="{% static 'img/about/team.png' %}">
+    <div class="team card text-center p-0">
+      <div class="card-body">
+        <img src="{% static 'img/team/nduta.png' %}" class="team-image">
       </div>
     </div>
   </div>
   <!--start of second card group-->
   <div class='card-group'>
-    <div class="team card text-center">
-      <div class="card-body pl-0 pr-0">
-        <img src="{% static 'img/about/team.png' %}">
+    <div class="team card text-center p-0">
+      <div class="card-body">
+        <img src="{% static 'img/team/brenda.jpeg' %}" class="team-image">
       </div>
     </div>
-    <div class="team card text-center">
-      <div class="card-body pl-0 pr-0">
-        <img src="{% static 'img/about/team.png' %}">
+    <div class="team card text-center p-0">
+      <div class="card-body">
+        <img src="{% static 'img/team/yazmin.jpeg' %}" class="team-image">
       </div>
     </div>
-    <div class="team card text-center">
-      <div class="card-body pl-0 pr-0">
-        <img src="{% static 'img/about/team.png' %}">
+    <div class="team card text-center p-0">
+      <div class="card-body">
+        <img src="{% static 'img/about/team.png' %}" class="team-image">
       </div>
     </div>
   </div>
