--- a/wajibisha/templates/profile/profile_detail.html
+++ b/wajibisha/templates/profile/profile_detail.html
@@ -43,7 +43,10 @@
         </div>
       </div>
     </div>
-    <div class="col-6 pull-left"></div>
+    <div class="col-6 pull-left">
+      
+      
+    </div>
   </div>
       
 
