Add social media links

--- a/wajibisha/templates/_footer.html
+++ b/wajibisha/templates/_footer.html
@@ -35,6 +35,16 @@
             <a class="footer-text" href="https://facebook.com/HacksHackersAfrica" target="_blank">Hacks/Hackers Africa</a>
           </li>
         </ul>
+
+        <p class="pt-4">
+          Join Our Social Media Networks:
+        </p>
+        <ul>
+          <li>
+            <a href="https://twitter.com/@pesachecktwitter"><i class="fa fa-twitter fa-lg fa-fw"></i></a>
+            <a href="https://facebook.com/@pesacheckfacebook"><i class="fa fa-facebook fa-lg fa-fw"></i></a>
+          </li>
+        </ul>
       </div>
       <div class="col-md-4 col-sm-12 mt-md-0 mt-sm-5 text-left">
         <p class="pt-3">
