--- a/wajibisha/templates/_footer.html
+++ b/wajibisha/templates/_footer.html
@@ -40,9 +40,9 @@
           Join Our Social Media Networks:
         </p>
         <ul>
-          <li>
-            <a href="https://twitter.com/@pesachecktwitter"><i class="fa fa-twitter fa-lg fa-fw"></i></a>
-            <a href="https://facebook.com/@pesacheckfacebook"><i class="fa fa-facebook fa-lg fa-fw"></i></a>
+          <li class="social-icons">
+            <a href="https://twitter.com/pesacheck"><i class="fa fa-twitter fa-lg fa-fw"></i></a>
+            <a href="https://www.facebook.com/pesacheck"><i class="fa fa-facebook fa-lg fa-fw"></i></a>
           </li>
         </ul>
       </div>
