--- a/wajibisha/templates/about.html
+++ b/wajibisha/templates/about.html
@@ -18,7 +18,7 @@
 <div class="showcase how-it-works text-center">
     {% block about %}
     <div class="body-text wrapper clearfix text-center pl-5 pr-5">
-      <h2>CONTACT US</h2>
+      <h4 style="color:#0067A3;">CONTACT US</h4>
       <br/>
       <div class="d-flex flex-row justify-content-center">
         <div class="col-4 text-center">
