--- a/wajibisha/templates/homepage_country.html
+++ b/wajibisha/templates/homepage_country.html
@@ -37,13 +37,13 @@
 {% endblock header_content %}`
 
 {% block content_container %}
-  <div class="showcase how-it-works text-center">
+  <div class="showcase how-it-works text-center pb-5">
     {% block how_it_works %}
     <div class="wrapper clearfix">
       <h4>SOME OF THE PROMISES WE ARE TRACKING</h4>
       <br/>
       <!--Start of cards-->
-      <div class="card-group" style="height:500px;">
+      <div class="card-group" style="height:600px;">
         <div class="card p-0 m-3 body-text" style="height:450px;">
           <div class="pt-4">
             <img class="card-img-top rounded mx-auto d-block" src="{% static 'img/tracker/category/housing.svg' %}" alt="Card image cap"></div>
