--- a/wajibisha/templates/profile/_blocks/_promise_card.html
+++ b/wajibisha/templates/profile/_blocks/_promise_card.html
@@ -36,12 +36,8 @@
     </div>
   </div>
 
-  <div class="d-flex flex-row pb-3 pt-3">
-    <p class="pt-0 mr-auto">
-      <img src="{% static 'img/tracker/Share.svg' %}" height="15px"
-           width="15px">
-      <span>Share</span></p>
-    <p class="pt-0"><img src="{% static 'img/tracker/Watch.svg' %}"
-                         height="15px" width="15px"> Watch</p>
+  <div class="d-flex flex-row pb-3 pt-3 pl-5">
+    <a  href="" class="pt-0 mr-auto content-align-center pl-4"><i class="fa fa-twitter fa-sm fa-share-alt pl-5 pr-1"></i>Share</a>
+
   </div>
 </div>
