--- a/wajibisha/templates/blocks/filter_promises.html
+++ b/wajibisha/templates/blocks/filter_promises.html
@@ -78,11 +78,11 @@
       }
 
       function getPromiseHTML(promise) {
-          var html = "<div class=\"col-6\">\n" +
+          var html = "<div class=\"col-6 pt-5 pr-2\">\n" +
               "            <table class=\"table table-bordered bg-light promise-item\">\n" +
               "              <tbody>\n" +
               "              <tr>\n" +
-              "                <td>\n" +
+              "                <td class=\"table-width\">\n" +
               "                <img class=\"p-0 card_status_img\" src=\"/static/img/tracker/status/";
 
           var card_img = "";
@@ -133,12 +133,6 @@
               "                    <p class=\"offset-1\"><img\n" +
               "                        src=\"{% static 'img/tracker/share.svg' %}\" height=\"15px\"\n" +
               "                        width=\"15px\"> Share</p>\n" +
-              "                    <p class=\"offset-1\"><img\n" +
-              "                        src=\"{% static 'img/tracker/watch.svg' %}\" height=\"15px\"\n" +
-              "                        width=\"15px\"> Watch</p>\n" +
-              "                    <p class=\"offset-1\"><img\n" +
-              "                        src=\"{% static 'img/tracker/clap.svg' %}\" height=\"15px\"\n" +
-              "                        width=\"15px\"> Congratulate</p>\n" +
               "                  </div>\n" +
               "                </td>\n" +
               "              </tr>\n" +
