Update footer section

--- a/wajibisha/templates/_footer.html
+++ b/wajibisha/templates/_footer.html
@@ -47,7 +47,7 @@
         </ul>
       </div>
       <div class="col-md-4 col-sm-12 mt-md-0 mt-sm-5 text-left">
-        <p class="pt-3">
+        <p class="">
           <a href="https://codeforafrica.org" target="_blank">
             <img class="footer-logo m-4" src="{% static 'img/logo/cfafrica-logo.png' %}"
             alt="Code for Africa"></a>
@@ -59,6 +59,14 @@
               <a href="https://www.thomsonreuters.com/en.html">
                 <img class="tr-logo" src="{% static 'img/logo/thomson-reuters-logo.svg' %}"
                 alt="Thomson Reuters"></a>
+              </p>
+              <p class="small text-center">
+                PesaCheck HQ:<br>
+                Nairobi Garage, 8th Floor, Pinetree Plaza, <br>
+                Kaburu Drive, Kilimani, Nairobi, Kenya.<br>
+                Phone: +254 727 588456<br>
+                Email: hello@pesacheck.org
+                </p>
               </p>
             </div>
           </div>
