--- a/wajibisha/templates/blocks/footer.html
+++ b/wajibisha/templates/blocks/footer.html
@@ -36,8 +36,8 @@
           </li>
         </ul>
       </div>
-      <div class="col-md-4 col-sm-12 mt-md-0 mt-sm-5 text-left">
-        <p class="pt-3">
+      <div class="col-md-4 col-sm-12 mt-md-0 mt-sm-5 text-left text-white">
+        <p class="">
           <a href="https://codeforafrica.org" target="_blank">
             <img class="footer-logo m-4" src="{% static 'img/logo/cfafrica-logo.png' %}"
             alt="Code for Africa"></a>
@@ -50,8 +50,19 @@
                 <img class="tr-logo" src="{% static 'img/logo/thomson-reuters-logo.svg' %}"
                 alt="Thomson Reuters"></a>
               </p>
+              <p>
+                  PesaCheck HQ:<br>
+                  Nairobi Garage, 8th Floor, Pinetree Plaza, <br>
+                  Kaburu Drive, Kilimani, Nairobi, Kenya.<br>
+                <p>
+                  Phone: +254 727 588456<br>
+                  Email: hello@pesacheck.org
+                </p>
+              <p>
+              </p>
             </div>
           </div>
+        </div>
         </div>
       </div>
     </footer>
