--- a/wajibisha/static/css/wajibisha.scss
+++ b/wajibisha/static/css/wajibisha.scss
@@ -215,10 +215,9 @@ body {
   border-color: #bfd9e8 !important;
 }
 
-.team {
-  padding: 0;
-  margin: 3rem;
-  height: 230px;
+.team.crard {
+  height:260px;
+  margin:10px;
 }
 
 .input-group-btn {
