--- a/wajibisha/templates/blocks/team.html
+++ b/wajibisha/templates/blocks/team.html
@@ -3,40 +3,46 @@
   <div class="wrapper clearfix text-center">
    <h4>THE TEAM</h4>
    <!--start a first card group-->
-  <div class='pt-0 card-group'>
-    <div class="team card text-center p-0">
+  <div class="row pl-5 pr-5">
+    <div class="col-4" style="margin:0;">
+    <div class="card text-center p-0" style="height:260px;margin:10px;">
       <div class="card-body">
-        <img  src="{% static 'img/team/ahereza.jpeg' %}" class="team-image">
-      </div>
-    </div>
-    <div class="team card text-center p-0">
-      <div class="card-body">
-        <img src="{% static 'img/team/mugendi.jpg' %}" class="team-image">
-      </div>
-    </div>
-    <div class="team card text-center p-0">
-      <div class="card-body">
-        <img src="{% static 'img/team/nduta.png' %}" class="team-image">
+        <img class="rounded-circle" src="{% static 'img/team/ahereza.jpeg' %}" height="220px">
       </div>
     </div>
   </div>
+  <div class="col-4">
+    <div class="card text-center p-0" style="height:260px;margin:10px;">
+      <div class="card-body">
+        <img class="rounded-circle" src="{% static 'img/team/mugendi.jpg' %}" height="220px">
+      </div>
+    </div>
+  </div>
+  <div class="col-4">
+    <div class=" card text-center p-0" style="height:260px;margin:10px;">
+      <div class="card-body">
+        <img class="rounded-circle" src="{% static 'img/team/nduta.png' %}"height="220px" >
+      </div>
+    </div>
+  </div>
+</div>
   <!--start of second card group-->
-  <div class='card-group'>
-    <div class="team card text-center p-0">
+  <div class="row pt-5 pl-5 pr-5">
+  <div class="col-4">
+    <div class="card text-center p-0" style="height:260px;margin:10px;">
       <div class="card-body">
-        <img src="{% static 'img/team/brenda.jpeg' %}" class="team-image">
+        <img class="rounded-circle" src="{% static 'img/team/brenda.jpeg' %}" height="220px">
       </div>
     </div>
-    <div class="team card text-center p-0">
+  </div>
+  <div class="col-4">
+    <div class="card text-center p-0" style="height:260px;margin:10px;">
       <div class="card-body">
-        <img src="{% static 'img/team/yazmin.jpeg' %}" class="team-image">
+        <img class="rounded-circle" src="{% static 'img/team/yazmin.jpeg' %}"height="220px" >
       </div>
     </div>
-    <div class="team card text-center p-0">
-      <div class="card-body">
-        <img src="{% static 'img/about/team.png' %}" class="team-image">
-      </div>
-    </div>
+  </div>
+  </div>
   </div>
   </div>
 </div>
