--- a/wajibisha/templates/profile/_blocks/_promise_card.html
+++ b/wajibisha/templates/profile/_blocks/_promise_card.html
@@ -37,7 +37,7 @@
   </div>
 
   <div class="d-flex flex-row pb-3 pt-3 pl-5">
-    <a  href="" class="pt-0 mr-auto content-align-center pl-4"><i class="fa fa-twitter fa-sm fa-share-alt pl-5 pr-1"></i>Share</a>
+    <a  href="#" class="pt-0 mr-auto content-align-center pl-4 body-text small"><i class="fa fa-twitter fa-sm fa-share-alt pl-5 pr-1"></i>Share</a>
 
   </div>
 </div>
