--- a/wajibisha/templates/_base.html
+++ b/wajibisha/templates/_base.html
@@ -4,17 +4,18 @@
 
 {% block head_css %}
   {{ block.super }}
-  <link rel="stylesheet" href="{% sass_src 'css/wajibisha.scss' %}">
+  <link rel="stylesheet" 
+        href="{% sass_src 'css/wajibisha.scss' %}">
   <link rel="stylesheet"
         href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
   <link
       href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-  <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
+  <script 
+      src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
   <script
       src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
   <script
       src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
-
 
 {% endblock %}
 
