--- a/wajibisha/templates/blocks/team.html
+++ b/wajibisha/templates/blocks/team.html
@@ -5,23 +5,23 @@
    <!--start a first card group-->
   <div class="row pl-5 pr-5">
     <div class="col-4" style="margin:0;">
-    <div class="card text-center p-0" style="height:260px;margin:10px;">
+    <div class="card text-center p-0" style="height:300px;margin:10px;">
       <div class="card-body">
-        <img class="rounded-circle" src="{% static 'img/team/ahereza.jpeg' %}" height="220px">
+        <img class="rounded-circle" src="{% static 'img/team/ahereza.jpeg' %}" style="display:block;height:auto;max-width:100%;max-height:250px;width:250px;">
       </div>
     </div>
   </div>
   <div class="col-4">
-    <div class="card text-center p-0" style="height:260px;margin:10px;">
+    <div class="card text-center p-0" style="height:300px;margin:10px;">
       <div class="card-body">
-        <img class="rounded-circle" src="{% static 'img/team/mugendi.jpg' %}" height="220px">
+        <img class="rounded-circle" src="{% static 'img/team/mugendi.jpg' %}" height="220px" style="display:block;height:auto;max-width:100%;max-height:250px;width:250px;">
       </div>
     </div>
   </div>
   <div class="col-4">
-    <div class=" card text-center p-0" style="height:260px;margin:10px;">
+    <div class=" card text-center p-0" style="height:300px;margin:10px;">
       <div class="card-body">
-        <img class="rounded-circle" src="{% static 'img/team/nduta.png' %}"height="220px" >
+        <img class="rounded-circle" src="{% static 'img/team/nduta.png' %}"height="220px" style="display:block;height:auto;max-width:100%;max-height:250px;width:250px;">
       </div>
     </div>
   </div>
@@ -29,19 +29,21 @@
   <!--start of second card group-->
   <div class="row pt-5 pl-5 pr-5">
   <div class="col-4">
-    <div class="card text-center p-0" style="height:260px;margin:10px;">
+    <div class="card text-center p-0" style="height:300px;margin:10px;">
       <div class="card-body">
-        <img class="rounded-circle" src="{% static 'img/team/brenda.jpeg' %}" height="220px">
+        <img class="rounded-circle" src="{% static 'img/team/yazmin.jpeg' %}"height="220px" style="display:block;height:auto;max-width:100%;max-height:250px;width:250px;">
       </div>
     </div>
   </div>
+
   <div class="col-4">
-    <div class="card text-center p-0" style="height:260px;margin:10px;">
+    <div class="card text-center p-0" style="height:300px;margin:10px;">
       <div class="card-body">
-        <img class="rounded-circle" src="{% static 'img/team/yazmin.jpeg' %}"height="220px" >
+        <img class="rounded-circle" src="{% static 'img/team/brenda.jpeg' %}" height="220px" style="display:block;height:auto;max-width:100%;max-height:250px;width:250px;">
       </div>
     </div>
   </div>
+
   </div>
   </div>
   </div>
