--- a/wajibisha/templates/blocks/buttons.html
+++ b/wajibisha/templates/blocks/buttons.html
@@ -1,4 +1,4 @@
-<!--buttons for the promise tracker section are defined here-->
+<!--Update buttons defined here-->
 <div class="container">
   <div class="d-flex pl-5 flex-row justify-content-center" style="margin:30px;">
     <button type="button" class="pl-5 pr-5 m-5 btn lead" style="color:white;background-color:#0067A3;font-size: 1rem;font-weight: 100;border-top-left-radius: 50px;border-bottom-left-radius: 50px;border-top-right-radius: 50px;
@@ -10,4 +10,4 @@
   </button>
 </div>
 </div>
-<!--end of button class-->
+<!--./end of button class-->
