--- a/wajibisha/templates/blocks/filter_promises.html
+++ b/wajibisha/templates/blocks/filter_promises.html
@@ -2,7 +2,7 @@
 <div class="">
   <div class="showcase how-it-works text-center body-text">
       <div class="d-flex flex-row justify-content-center">
-        <div class="row d-flex flex-row justify-content-end pb-5 breadcrumb-color">
+        <div class="row d-flex flex-row justify-content-end pb-5 ">
           <p class="small pt-2 pb-3">Filter by:</p>
             <div class="pl-3 dropdown" style="width:300px;font-size:14px;font-weight:100;">
               <select class="form-control promise-select dropdown-toggle" data-style="btn-primary" id="status_select" onchange="filter()">
@@ -24,6 +24,7 @@
 
           </div>
         </div>
+   
 
         
     <!--fulfilled card section-->
@@ -31,6 +32,7 @@
       <div class="row pt-5 pb-5" id="promises_container">
 
       </div>
+
       <!--./end of fulfilled card section-->
 
 
