--- a/wajibisha/templates/profile/profile_detail.html
+++ b/wajibisha/templates/profile/profile_detail.html
@@ -46,7 +46,7 @@
   </div>
       
 
-      <div class="tabcontent" id="tab_sector" style="display: block">
+      <div class="tabcontent" id="tab_sector" style="display:block;"> 
 
         <div class="row pt-5">
           <!--start of card-->
