--- a/wajibisha/templates/blocks/team.html
+++ b/wajibisha/templates/blocks/team.html
@@ -4,24 +4,24 @@
    <h4>THE TEAM</h4>
    <!--start a first card group-->
   <div class="row pl-5 pr-5">
-    <div class="col-4" style="margin:0;">
-    <div class="card text-center p-0" style="height:300px;margin:10px;">
+    <div class="col-4">
+    <div class="team card text-center p-0">
       <div class="card-body">
-        <img class="rounded-circle" src="{% static 'img/team/ahereza.jpeg' %}" style="display:block;height:auto;max-width:100%;max-height:250px;width:250px;">
+        <img class="rounded-circle" src="{% static 'img/team/ahereza.jpeg' %}" >
       </div>
     </div>
   </div>
   <div class="col-4">
-    <div class="card text-center p-0" style="height:300px;margin:10px;">
+    <div class="team card text-center p-0">
       <div class="card-body">
-        <img class="rounded-circle" src="{% static 'img/team/mugendi.jpg' %}" height="220px" style="display:block;height:auto;max-width:100%;max-height:250px;width:250px;">
+        <img class="rounded-circle" src="{% static 'img/team/mugendi.jpg' %}">
       </div>
     </div>
   </div>
   <div class="col-4">
-    <div class=" card text-center p-0" style="height:300px;margin:10px;">
+    <div class="team card text-center p-0">
       <div class="card-body">
-        <img class="rounded-circle" src="{% static 'img/team/nduta.png' %}"height="220px" style="display:block;height:auto;max-width:100%;max-height:250px;width:250px;">
+        <img class="img-team rounded-circle" src="{% static 'img/team/nduta.png' %}">
       </div>
     </div>
   </div>
@@ -29,17 +29,17 @@
   <!--start of second card group-->
   <div class="row pt-5 pl-5 pr-5">
   <div class="col-4">
-    <div class="card text-center p-0" style="height:300px;margin:10px;">
+    <div class="team card text-center p-0">
       <div class="card-body">
-        <img class="rounded-circle" src="{% static 'img/team/yazmin.jpeg' %}"height="220px" style="display:block;height:auto;max-width:100%;max-height:250px;width:250px;">
+        <img class="img-team rounded-circle" src="{% static 'img/team/yazmin.jpeg' %}">
       </div>
     </div>
   </div>
 
   <div class="col-4">
-    <div class="card text-center p-0" style="height:300px;margin:10px;">
+    <div class="team card text-center p-0">
       <div class="card-body">
-        <img class="rounded-circle" src="{% static 'img/team/brenda.jpeg' %}" height="220px" style="display:block;height:auto;max-width:100%;max-height:250px;width:250px;">
+        <img class="img-team rounded-circle" src="{% static 'img/team/brenda.jpeg' %}">
       </div>
     </div>
   </div>
