move readme from wajibisha to overall README

--- a/hurumap/templates/_footer.html
+++ b/hurumap/templates/_footer.html
@@ -33,7 +33,7 @@
         </li>
       {% endif %}
       <li>
-        <a href="#" target="_blank">AP (coming soon)</a>
+        <a href="https://takwimu.africa" target="_blank">TAKWIMU</a>
       </li>
     </ul>
     <br/>
